--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "build:ui": "@powershell Remove-Item -Recurse -Force dist && cd ../fullstackopen/part2/phonebook && npm run build && @powershell Copy-Item dist -Recurse ../../../phonebook",
     "deploy": "fly deploy",
     "deploy:full": "npm run build:ui && npm run deploy",
-    "logs:prod": "fly logs"
+    "logs:prod": "fly logs",
+    "lint": "eslint ."
   },
   "author": "Matias Paloranta",
   "license": "ISC",
@@ -23,6 +24,8 @@
   },
   "devDependencies": {
     "@flydotio/dockerfile": "^0.5.2",
+    "@stylistic/eslint-plugin-js": "^1.6.3",
+    "eslint": "^8.57.0",
     "nodemon": "^3.0.3"
   }
 }
